# sipsa

emces/: README.md  emces.md  fletes.md  pyproject.toml
emces/conf/: logging.yml
emces/conf/base/: catalog.yml  parameters.yml
emces/conf/base/exclusions/: band_excluir.yml
emces/src/emces/: __init__.py  __main__.py  pipeline_registry.py  settings.py  utils.py
emces/src/emces/pipelines/cancilleria/: __init__.py  nodes.py  pipeline.py
emces/src/emces/pipelines/consolidacion_ra/: __init__.py  nodes.py  pipeline.py
emces/src/emces/pipelines/fletes/: __init__.py  nodes.py  pipeline.py
emces/src/emces/pipelines/union_ra/: __init__.py  nodes.py  pipeline.py
emces/src/emces/strategies/: __init__.py  source_strategy.py  via_strategy.py
emces/tests/: test_calidad.py
emces/tests/pipelines/cancilleria/: test_nodes.py
emces/tests/pipelines/consolidacion_ra/: test_nodes.py
emces/tests/pipelines/union_ra/: test_nodes.py  test_strategies.py
sipsa/: .dockerignore  .env.example  .gitignore  Dockerfile  app.py  iniciar_app.bat  pyproject.toml  requirements.txt  sipsa.md
sipsa-ipc/: .env.example  .gitignore  README.md  app.py  iniciar_app.bat  pyproject.toml
sipsa-ipc/conf/base/: catalog.yml  logging.yml  parameters.yml  parameters_articulos_ipc.yml
sipsa-ipc/docs/: 01_arquitectura.md  02_instalacion.md  03_configuracion.md  04_modulos.md  05_flujo_datos.md  06_git.md  ARQUITECTURA.md  CAPACITACION.md  DESPLIEGUE.md  MANUAL_API.md
sipsa-ipc/scripts/: actualizar_articulos_ipc.py  aplicar_formato_t39.py  comparar_variaciones.py  corregir_variaciones_t39.py  iniciar_api.bat  inspeccionar_t39.py  inspect_ref_format.py  procesar_mes.bat  verificar_formato_t39.py  verificar_variaciones.py
sipsa-ipc/src/sipsa_abastecimiento/: __init__.py  __main__.py  pipeline_registry.py  settings.py
sipsa-ipc/src/sipsa_abastecimiento/pipelines/aggregation/: pipeline.py
sipsa-ipc/src/sipsa_abastecimiento/pipelines/cleaning/: __init__.py  pipeline.py
sipsa-ipc/src/sipsa_abastecimiento/pipelines/comparison/: nodes.py  pipeline.py
sipsa-ipc/src/sipsa_abastecimiento/pipelines/formatting/: nodes.py  pipeline.py
sipsa-ipc/src/sipsa_abastecimiento/pipelines/ingestion/: nodes.py  pipeline.py
sipsa-ipc/src/sipsa_abastecimiento/pipelines/preparation/: nodes.py  pipeline.py
sipsa-ipc/src/sipsa_abastecimiento/pipelines/reporting/: nodes.py  pipeline.py
sipsa-ipc/src/sipsa_abastecimiento/pipelines/validation/: nodes.py  pipeline.py
sipsa-ipc/src/sipsa_ipc/: __init__.py  __main__.py  pipeline_registry.py  settings.py
sipsa-ipc/src/sipsa_ipc/api/: auth.py  data_store.py  main.py  models.py  runner.py
sipsa-ipc/src/sipsa_ipc/api/routers/: abastecimiento.py  comparacion.py  estadisticas.py  meses.py  pipeline.py
sipsa-ipc/src/sipsa_ipc/pipelines/aggregation/: nodes.py  pipeline.py
sipsa-ipc/src/sipsa_ipc/pipelines/cleaning/: __init__.py  nodes.py  pipeline.py
sipsa-ipc/src/sipsa_ipc/pipelines/comparison/: nodes.py  pipeline.py
sipsa-ipc/src/sipsa_ipc/pipelines/formatting/: pipeline.py
sipsa-ipc/src/sipsa_ipc/pipelines/ingestion/: nodes.py  pipeline.py
sipsa-ipc/src/sipsa_ipc/pipelines/preparation/: pipeline.py
sipsa-ipc/src/sipsa_ipc/pipelines/reporting/: nodes.py  pipeline.py
sipsa-ipc/src/sipsa_ipc/pipelines/validation/: pipeline.py
sipsa-ipc/src/sipsa_ipc/validations/: schemas.py
sipsa-ipc/templates/: index.html
sipsa-ipc/tests/: conftest.py
sipsa-ipc/tests/api/: test_endpoints.py
sipsa-ipc/tests/integration/: test_numeric_vs_sas.py  test_pipeline_e2e.py
sipsa-ipc/tests/performance/: test_api_performance.py
sipsa-ipc/tests/pipelines/aggregation/: test_nodes.py
sipsa-ipc/tests/pipelines/cleaning/: __init__.py  test_nodes.py
sipsa-ipc/tests/pipelines/comparison/: test_nodes.py
sipsa-ipc/tests/pipelines/formatting/: test_nodes.py
sipsa-ipc/tests/pipelines/ingestion/: test_nodes.py
sipsa-ipc/tests/pipelines/reporting/: test_nodes.py
sipsa-ipc/tests/pipelines/validation/: test_nodes.py
sipsa/conf/base/: catalog.yml  parameters.yml
sipsa/conf/base/mappings/: cuadros.yml  fuentes.yml  grupos.yml  productos.yml
sipsa/src/sipsa/: __init__.py  pipeline_registry.py  settings.py
sipsa/src/sipsa/pipelines/aggregation/: nodes.py  pipeline.py
sipsa/src/sipsa/pipelines/ingestion/: nodes.py  pipeline.py
sipsa/src/sipsa/pipelines/reporting/: nodes.py  pipeline.py
sipsa/templates/: index.html
spaceflights/: README.md  (+1 more)
(+4 files in other folders)
